--- a/app/src/main/res/navigation/navigation_c.xml
+++ b/app/src/main/res/navigation/navigation_c.xml
@@ -7,5 +7,13 @@
 
     <fragment
         android:id="@+id/fragmentC"
-        android:name="com.onshop.bottomnavigationmultistack.c.FragmentC" />
+        android:name="com.onshop.bottomnavigationmultistack.c.FragmentC" >
+        <action
+            android:id="@+id/action_fragmentC_to_fragmentCC"
+            app:destination="@id/fragmentCC" />
+    </fragment>
+    <fragment
+        android:id="@+id/fragmentCC"
+        android:name="com.onshop.bottomnavigationmultistack.c.FragmentCC"
+        android:label="FragmentCC" />
 </navigation>
